Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-3561

Too Many Warning Log: "Entity is not relevant to Prometheus"

Attach filesAttach ScreenshotVotersWatch issueWatchersCreate sub-taskLinkCloneUpdate Comment AuthorReplace String in CommentUpdate Comment VisibilityDelete Comments
    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.17.0
    • 1.18.0, 1.17.1
    • metrics
    • None

    Description

      I encountered the same issue as KUDU-3549, so I recompiled Kudu using the master branch.

      Now Prometheus is able to collect metrics from Kudu correctly through the /metrics_prometheus endpoint.

      However, I noticed a large number of "Failed to write entity [xxx] as Prometheus: Not found: Entity is not relevant to Prometheus" warning logs in the Tserver's logs.

      Could you please confirm if this is a code issue? If not, how can I reduce these logs?

       

      Attachments

        Activity

          This comment will be Viewable by All Users Viewable by All Users
          Cancel

          People

            aserbin Alexey Serbin
            liumumumumumu Liu Lin
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Slack

                Issue deployment