KUDU-3561 skip tablet entities in Prometheus format

Currently, the Prometheus metrics writer outputs only server-level
metrics.  Prior to this patch, the Prometheus metrics writer would
output a warning message for every tablet it encounters while iterating
through all the existing metric entities.

This patch addresses the issue: the tablet entries are now silently
skipped, as they should.

I also added a TODO for KUDU-3563 to output tablet-level metrics
in Prometheus format as well.

Change-Id: I618bbc2caab7a8d9812eeaeb67ac42b0293b0654
Reviewed-on: http://gerrit.cloudera.org:8080/21226
Reviewed-by: Mahesh Reddy <mreddy@cloudera.com>
Reviewed-by: Abhishek Chennaka <achennaka@cloudera.com>
Tested-by: Alexey Serbin <alexey@apache.org>